Fixed social media icon spacing, resized project photos, added github repo gallery

--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,8 @@
-/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
-
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
    html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
   }
-  
-  /*
-   * Remove text-shadow in selection highlight:
-   * https://twitter.com/miketaylr/status/12228805301
-   *
-   * Vendor-prefixed and regular ::selection selectors cannot be combined:
-   * https://stackoverflow.com/a/16982510/7133471
-   *
-   * Customize the background color to match your design.
-   */
   
   ::-moz-selection {
     background: #b3d4fc;
@@ -37,10 +14,6 @@
     text-shadow: none;
   }
   
-  /*
-   * A better looking default horizontal rule
-   */
-  
   hr {
     display: block;
     height: 1px;
@@ -49,13 +22,7 @@
     margin: 1em 0;
     padding: 0;
   }
-  
-  /*
-   * Remove the gap between audio, canvas, iframes,
-   * images, videos and the bottom of their containers:
-   * https://github.com/h5bp/html5-boilerplate/issues/440
-   */
-  
+
   audio,
   canvas,
   iframe,
@@ -65,27 +32,15 @@
     vertical-align: middle;
   }
   
-  /*
-   * Remove default fieldset styles.
-   */
-  
   fieldset {
     border: 0;
     margin: 0;
     padding: 0;
   }
   
-  /*
-   * Allow only vertical resizing of textareas.
-   */
-  
   textarea {
     resize: vertical;
   }
-  
-  /* ==========================================================================
-     Author's custom styles
-     ========================================================================== */
   
   /* General Styles */
   html {
@@ -97,8 +52,7 @@
     font-family: 'Open Sans', sans-serif;
     color: #453E4F;
     background-color: white;
-    /* Sometimes the default background for a browser isn't exactly white. Adding a default allows more consistency between browsers. */
-  }
+    }
   
   ul,
   ol {
@@ -209,8 +163,6 @@
     text-align: left;
   }
   
-  /* set the margins & paddings for each section - these are only a suggestion :) */
-  /* setting all margins to zero removes all browser added default margins */
   h1,
   h2,
   h3,
@@ -224,7 +176,6 @@
     margin: 0;
   }
   
-  /* then can set the margin & paddings for any element */
   header {
     padding-top: 30px;
     padding-bottom: 60px;
@@ -447,49 +398,37 @@
   footer .social-icons {
     display: flex;
     justify-content: space-around;
+    align-items: center;
+
   }
   
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
+  }
+
   footer ul {
     width: 100%;
   }
-  
-  footer .social-icons li {
-    width: 40px;
+
+  footer .social-icons li{
+    width: 200px;
     height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
+  
   footer .social-icons li i {
     font-size: 1.875rem;
     color: #453e4f;
   }
   
-  
-  
-  
-  /* ==========================================================================
-     Helper classes
-     ========================================================================== */
-  
-  /*
-   * Hide visually and from screen readers
-   */
-  
   .hidden,
   [hidden] {
     display: none !important;
   }
-  
-  /*
-   * Hide only visually, but have it available for screen readers:
-   * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
-   *
-   * 1. For long content, line feeds are not interpreted as spaces and small width
-   *    causes content to wrap 1 word per line:
-   *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
-   */
   
   .sr-only {
     border: 0;
@@ -501,14 +440,7 @@
     position: absolute;
     white-space: nowrap;
     width: 1px;
-    /* 1 */
   }
-  
-  /*
-   * Extends the .sr-only class to allow the element
-   * to be focusable when navigated to via the keyboard:
-   * https://www.drupal.org/node/897638
-   */
   
   .sr-only.focusable:active,
   .sr-only.focusable:focus {
@@ -521,25 +453,9 @@
     width: auto;
   }
   
-  /*
-   * Hide visually and from screen readers, but maintain layout
-   */
-  
   .invisible {
     visibility: hidden;
   }
-  
-  /*
-   * Clearfix: contain floats
-   *
-   * For modern browsers
-   * 1. The space content is one way to avoid an Opera bug when the
-   *    `contenteditable` attribute is included anywhere else in the document.
-   *    Otherwise it causes space to appear at the top and bottom of elements
-   *    that receive the `clearfix` class.
-   * 2. The use of `table` rather than `block` is only necessary if using
-   *    `:before` to contain the top-margins of child elements.
-   */
   
   .clearfix::before,
   .clearfix::after {
@@ -550,12 +466,7 @@
   .clearfix::after {
     clear: both;
   }
-  
-  /* ==========================================================================
-     EXAMPLE Media Queries for Responsive Design.
-     These examples override the primary ('mobile first') styles.
-     Modify as content requires.
-     ========================================================================== */
+
   @media only screen and (min-width:768px) {
     /*Tablet styles here*/
   
@@ -564,7 +475,6 @@
       max-width: 640px;
     }
   
-    /* font styles */
     h1 {
       font-size: 2.5rem;
     }
@@ -589,8 +499,6 @@
       font-size: 1rem;
     }
   
-    /* element margins */
-    /* the list element have 20px of bottom margin already */
     header {
       padding-top: 60px;
       padding-bottom: 80px;
@@ -600,7 +508,6 @@
       margin: 0 0 80px 0;
     }
   
-    /*#work */
     #projects {
       padding-top: 80px;
     }
@@ -669,7 +576,6 @@
       margin: 0 0 30px 0;
     }
   
-    /* header */
     header .content-wrapper {
       display: flex;
       justify-content: center;
@@ -677,7 +583,6 @@
     }
   
     header nav {
-      /* keep if using hamburger menu */
       display: flex;
       justify-content: center;
       width: 100%;
@@ -685,7 +590,6 @@
     }
   
     header nav ul {
-      /* keep if using hamburger menu */
       display: flex;
       justify-content: space-between;
       width: 80%;
@@ -700,8 +604,6 @@
     .home-title h2 {
       max-width: 80%;
     }
-  
-    /* portfolio */
     .portfolio-wrapper {
       justify-content: space-around;
     }
@@ -726,7 +628,6 @@
   
     .skill,
     .tool {
-      /*  width: auto; */
       width: 45%;
     }
   
@@ -998,12 +899,6 @@
     /* Style adjustments for high resolution devices */
   }
   
-  /* ==========================================================================
-     Print styles.
-     Inlined to avoid the additional HTTP request:
-     https://www.phpied.com/delay-loading-your-print-css/
-     ========================================================================== */
-  
   @media print {
   
     *,
@@ -1029,10 +924,6 @@
       content: " ("attr(title) ")";
     }
   
-    /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
     a[href^="#"]::after,
     a[href^="javascript:"]::after {
       content: "";
@@ -1048,10 +939,6 @@
       page-break-inside: avoid;
     }
   
-    /*
-     * Printing Tables:
-     * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
     thead {
       display: table-header-group;
     }
